--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Test automation with Playwright and NodeJS on the Demo Micro Focus Advantage Application Shopping",
   "main": "index.js",
   "scripts": {
-    "test:headless": "npx playwright test",
+    "test:headless": "playwright test",
     "test:ui": "playwright test --ui",
     "test:report": "playwright show-report"
   },
@@ -18,5 +18,9 @@
   "devDependencies": {
     "@playwright/test": "^1.46.1",
     "@types/node": "^22.5.0"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "playwright": "^1.46.1"
   }
 }
